Etapa2V7/parser.output
Terminals unused in grammar

   TOKEN_ERROR


State 60 conflicts: 1 shift/reduce


Grammar

    0 $accept: program $end

    1 program: declist

    2 declist: dec declist
    3        | /* empty */

    4 dec: DECL
    5    | FUNCT

    6 FUNCT: TYPE TK_IDENTIFIER '(' LISTPARAM ')' BODY

    7 LISTPARAM: PARAM RESTPARAM
    8          | /* empty */

    9 RESTPARAM: ',' PARAM RESTPARAM
   10          | /* empty */

   11 PARAM: TYPE TK_IDENTIFIER

   12 BODY: '{' BLCCOMAND '}'

   13 BLCCOMAND: COMAND RESTCOMAND
   14          | /* empty */

   15 RESTCOMAND: ';' COMAND RESTCOMAND
   16           | /* empty */

   17 COMAND: TK_IDENTIFIER '=' EXPRES
   18       | TK_IDENTIFIER '[' EXPRES ']' '=' EXPRES
   19       | CONTROLFL
   20       | KW_READ TK_IDENTIFIER
   21       | KW_PRINT LISTPRINT
   22       | KW_RETURN EXPRES

   23 LISTPRINT: ELEMENT RESTELEMENT

   24 RESTELEMENT: ELEMENT RESTELEMENT
   25            | /* empty */

   26 ELEMENT: LIT_STRING
   27        | EXPRES

   28 CONTROLFL: KW_IF '(' EXPRES ')' KW_THEN COMAND
   29          | KW_IF '(' EXPRES ')' KW_THEN COMAND KW_ELSE COMAND
   30          | KW_WHILE '(' EXPRES ')' BODY
   31          | KW_FOR '(' TK_IDENTIFIER '=' EXPRES KW_TO EXPRES ')' COMAND

   32 EXPRES: '('
   33       | ')'
   34       | TK_IDENTIFIER
   35       | TK_IDENTIFIER '[' EXPRES ']'
   36       | LITERALINTEGER
   37       | CARAC
   38       | VARREAL
   39       | EXPRES '*' EXPRES
   40       | EXPRES '+' EXPRES
   41       | EXPRES '-' EXPRES
   42       | EXPRES '/' EXPRES
   43       | EXPRES '<' EXPRES
   44       | EXPRES '>' EXPRES
   45       | '!' EXPRES
   46       | EXPRES OPERATOR_LE EXPRES
   47       | EXPRES OPERATOR_GE EXPRES
   48       | EXPRES OPERATOR_EQ EXPRES
   49       | EXPRES OPERATOR_NE EXPRES
   50       | EXPRES OPERATOR_AND EXPRES
   51       | EXPRES OPERATOR_OR EXPRES
   52       | TK_IDENTIFIER '(' LSTARG ')'
   53       | '#' TK_IDENTIFIER
   54       | '&' TK_IDENTIFIER

   55 LSTARG: EXPRES ARGTAIL

   56 ARGTAIL: ',' EXPRES ARGTAIL
   57        | /* empty */

   58 DECL: TYPE TK_IDENTIFIER '=' INILIT ';'
   59     | TYPE TK_IDENTIFIER '[' LITERALINTEGER ']' ';'
   60     | TYPE TK_IDENTIFIER '[' LITERALINTEGER ']' ':' RESTINILIT ';'
   61     | TYPE '#' TK_IDENTIFIER '=' INILIT ';'

   62 TYPE: KW_CHAR
   63     | KW_FLOAT
   64     | KW_INT

   65 INILIT: CARAC
   66       | LITERALINTEGER
   67       | VARREAL

   68 RESTINILIT: INILIT RESTINILIT
   69           | /* empty */

   70 VARREAL: LIT_REAL

   71 LITERALINTEGER: LIT_INTEGER

   72 CARAC: LIT_CHAR


Terminals, with rules where they appear

$end (0) 0
'!' (33) 45
'#' (35) 53 61
'&' (38) 54
'(' (40) 6 28 29 30 31 32 52
')' (41) 6 28 29 30 31 33 52
'*' (42) 39
'+' (43) 40
',' (44) 9 56
'-' (45) 41
'/' (47) 42
':' (58) 60
';' (59) 15 58 59 60 61
'<' (60) 43
'=' (61) 17 18 31 58 61
'>' (62) 44
'[' (91) 18 35 59 60
']' (93) 18 35 59 60
'{' (123) 12
'}' (125) 12
error (256)
KW_CHAR (258) 62
KW_INT (259) 64
KW_FLOAT (260) 63
KW_IF (261) 28 29
KW_THEN (262) 28 29
KW_ELSE (263) 29
KW_WHILE (264) 30
KW_FOR (265) 31
KW_TO (266) 31
KW_READ (267) 20
KW_RETURN (268) 22
KW_PRINT (269) 21
OPERATOR_LE (270) 46
OPERATOR_GE (271) 47
OPERATOR_EQ (272) 48
OPERATOR_NE (273) 49
OPERATOR_AND (274) 50
OPERATOR_OR (275) 51
TK_IDENTIFIER (276) 6 11 17 18 20 31 34 35 52 53 54 58 59 60 61
LIT_INTEGER (277) 71
LIT_REAL (278) 70
LIT_CHAR (279) 72
LIT_STRING (280) 26
TOKEN_ERROR (281)
IFELSE (282)


Nonterminals, with rules where they appear

$accept (47)
    on left: 0
program (48)
    on left: 1, on right: 0
declist (49)
    on left: 2 3, on right: 1 2
dec (50)
    on left: 4 5, on right: 2
FUNCT (51)
    on left: 6, on right: 5
LISTPARAM (52)
    on left: 7 8, on right: 6
RESTPARAM (53)
    on left: 9 10, on right: 7 9
PARAM (54)
    on left: 11, on right: 7 9
BODY (55)
    on left: 12, on right: 6 30
BLCCOMAND (56)
    on left: 13 14, on right: 12
RESTCOMAND (57)
    on left: 15 16, on right: 13 15
COMAND (58)
    on left: 17 18 19 20 21 22, on right: 13 15 28 29 31
LISTPRINT (59)
    on left: 23, on right: 21
RESTELEMENT (60)
    on left: 24 25, on right: 23 24
ELEMENT (61)
    on left: 26 27, on right: 23 24
CONTROLFL (62)
    on left: 28 29 30 31, on right: 19
EXPRES (63)
    on left: 32 33 34 35 36 37 38 39 40 41 42 43 44 45 46 47 48 49
    50 51 52 53 54, on right: 17 18 22 27 28 29 30 31 35 39 40 41 42
    43 44 45 46 47 48 49 50 51 55 56
LSTARG (64)
    on left: 55, on right: 52
ARGTAIL (65)
    on left: 56 57, on right: 55 56
DECL (66)
    on left: 58 59 60 61, on right: 4
TYPE (67)
    on left: 62 63 64, on right: 6 11 58 59 60 61
INILIT (68)
    on left: 65 66 67, on right: 58 61 68
RESTINILIT (69)
    on left: 68 69, on right: 60 68
VARREAL (70)
    on left: 70, on right: 38 67
LITERALINTEGER (71)
    on left: 71, on right: 36 59 60 66
CARAC (72)
    on left: 72, on right: 37 65


State 0

    0 $accept: . program $end

    KW_CHAR   shift, and go to state 1
    KW_INT    shift, and go to state 2
    KW_FLOAT  shift, and go to state 3

    $default  reduce using rule 3 (declist)

    program  go to state 4
    declist  go to state 5
    dec      go to state 6
    FUNCT    go to state 7
    DECL     go to state 8
    TYPE     go to state 9


State 1

   62 TYPE: KW_CHAR .

    $default  reduce using rule 62 (TYPE)


State 2

   64 TYPE: KW_INT .

    $default  reduce using rule 64 (TYPE)


State 3

   63 TYPE: KW_FLOAT .

    $default  reduce using rule 63 (TYPE)


State 4

    0 $accept: program . $end

    $end  shift, and go to state 10


State 5

    1 program: declist .

    $default  reduce using rule 1 (program)


State 6

    2 declist: dec . declist

    KW_CHAR   shift, and go to state 1
    KW_INT    shift, and go to state 2
    KW_FLOAT  shift, and go to state 3

    $default  reduce using rule 3 (declist)

    declist  go to state 11
    dec      go to state 6
    FUNCT    go to state 7
    DECL     go to state 8
    TYPE     go to state 9


State 7

    5 dec: FUNCT .

    $default  reduce using rule 5 (dec)


State 8

    4 dec: DECL .

    $default  reduce using rule 4 (dec)


State 9

    6 FUNCT: TYPE . TK_IDENTIFIER '(' LISTPARAM ')' BODY
   58 DECL: TYPE . TK_IDENTIFIER '=' INILIT ';'
   59     | TYPE . TK_IDENTIFIER '[' LITERALINTEGER ']' ';'
   60     | TYPE . TK_IDENTIFIER '[' LITERALINTEGER ']' ':' RESTINILIT ';'
   61     | TYPE . '#' TK_IDENTIFIER '=' INILIT ';'

    TK_IDENTIFIER  shift, and go to state 12
    '#'            shift, and go to state 13


State 10

    0 $accept: program $end .

    $default  accept


State 11

    2 declist: dec declist .

    $default  reduce using rule 2 (declist)


State 12

    6 FUNCT: TYPE TK_IDENTIFIER . '(' LISTPARAM ')' BODY
   58 DECL: TYPE TK_IDENTIFIER . '=' INILIT ';'
   59     | TYPE TK_IDENTIFIER . '[' LITERALINTEGER ']' ';'
   60     | TYPE TK_IDENTIFIER . '[' LITERALINTEGER ']' ':' RESTINILIT ';'

    '('  shift, and go to state 14
    '='  shift, and go to state 15
    '['  shift, and go to state 16


State 13

   61 DECL: TYPE '#' . TK_IDENTIFIER '=' INILIT ';'

    TK_IDENTIFIER  shift, and go to state 17


State 14

    6 FUNCT: TYPE TK_IDENTIFIER '(' . LISTPARAM ')' BODY

    KW_CHAR   shift, and go to state 1
    KW_INT    shift, and go to state 2
    KW_FLOAT  shift, and go to state 3

    $default  reduce using rule 8 (LISTPARAM)

    LISTPARAM  go to state 18
    PARAM      go to state 19
    TYPE       go to state 20


State 15

   58 DECL: TYPE TK_IDENTIFIER '=' . INILIT ';'

    LIT_INTEGER  shift, and go to state 21
    LIT_REAL     shift, and go to state 22
    LIT_CHAR     shift, and go to state 23

    INILIT          go to state 24
    VARREAL         go to state 25
    LITERALINTEGER  go to state 26
    CARAC           go to state 27


State 16

   59 DECL: TYPE TK_IDENTIFIER '[' . LITERALINTEGER ']' ';'
   60     | TYPE TK_IDENTIFIER '[' . LITERALINTEGER ']' ':' RESTINILIT ';'

    LIT_INTEGER  shift, and go to state 21

    LITERALINTEGER  go to state 28


State 17

   61 DECL: TYPE '#' TK_IDENTIFIER . '=' INILIT ';'

    '='  shift, and go to state 29


State 18

    6 FUNCT: TYPE TK_IDENTIFIER '(' LISTPARAM . ')' BODY

    ')'  shift, and go to state 30


State 19

    7 LISTPARAM: PARAM . RESTPARAM

    ','  shift, and go to state 31

    $default  reduce using rule 10 (RESTPARAM)

    RESTPARAM  go to state 32


State 20

   11 PARAM: TYPE . TK_IDENTIFIER

    TK_IDENTIFIER  shift, and go to state 33


State 21

   71 LITERALINTEGER: LIT_INTEGER .

    $default  reduce using rule 71 (LITERALINTEGER)


State 22

   70 VARREAL: LIT_REAL .

    $default  reduce using rule 70 (VARREAL)


State 23

   72 CARAC: LIT_CHAR .

    $default  reduce using rule 72 (CARAC)


State 24

   58 DECL: TYPE TK_IDENTIFIER '=' INILIT . ';'

    ';'  shift, and go to state 34


State 25

   67 INILIT: VARREAL .

    $default  reduce using rule 67 (INILIT)


State 26

   66 INILIT: LITERALINTEGER .

    $default  reduce using rule 66 (INILIT)


State 27

   65 INILIT: CARAC .

    $default  reduce using rule 65 (INILIT)


State 28

   59 DECL: TYPE TK_IDENTIFIER '[' LITERALINTEGER . ']' ';'
   60     | TYPE TK_IDENTIFIER '[' LITERALINTEGER . ']' ':' RESTINILIT ';'

    ']'  shift, and go to state 35


State 29

   61 DECL: TYPE '#' TK_IDENTIFIER '=' . INILIT ';'

    LIT_INTEGER  shift, and go to state 21
    LIT_REAL     shift, and go to state 22
    LIT_CHAR     shift, and go to state 23

    INILIT          go to state 36
    VARREAL         go to state 25
    LITERALINTEGER  go to state 26
    CARAC           go to state 27


State 30

    6 FUNCT: TYPE TK_IDENTIFIER '(' LISTPARAM ')' . BODY

    '{'  shift, and go to state 37

    BODY  go to state 38


State 31

    9 RESTPARAM: ',' . PARAM RESTPARAM

    KW_CHAR   shift, and go to state 1
    KW_INT    shift, and go to state 2
    KW_FLOAT  shift, and go to state 3

    PARAM  go to state 39
    TYPE   go to state 20


State 32

    7 LISTPARAM: PARAM RESTPARAM .

    $default  reduce using rule 7 (LISTPARAM)


State 33

   11 PARAM: TYPE TK_IDENTIFIER .

    $default  reduce using rule 11 (PARAM)


State 34

   58 DECL: TYPE TK_IDENTIFIER '=' INILIT ';' .

    $default  reduce using rule 58 (DECL)


State 35

   59 DECL: TYPE TK_IDENTIFIER '[' LITERALINTEGER ']' . ';'
   60     | TYPE TK_IDENTIFIER '[' LITERALINTEGER ']' . ':' RESTINILIT ';'

    ';'  shift, and go to state 40
    ':'  shift, and go to state 41


State 36

   61 DECL: TYPE '#' TK_IDENTIFIER '=' INILIT . ';'

    ';'  shift, and go to state 42


State 37

   12 BODY: '{' . BLCCOMAND '}'

    KW_IF          shift, and go to state 43
    KW_WHILE       shift, and go to state 44
    KW_FOR         shift, and go to state 45
    KW_READ        shift, and go to state 46
    KW_RETURN      shift, and go to state 47
    KW_PRINT       shift, and go to state 48
    TK_IDENTIFIER  shift, and go to state 49

    $default  reduce using rule 14 (BLCCOMAND)

    BLCCOMAND  go to state 50
    COMAND     go to state 51
    CONTROLFL  go to state 52


State 38

    6 FUNCT: TYPE TK_IDENTIFIER '(' LISTPARAM ')' BODY .

    $default  reduce using rule 6 (FUNCT)


State 39

    9 RESTPARAM: ',' PARAM . RESTPARAM

    ','  shift, and go to state 31

    $default  reduce using rule 10 (RESTPARAM)

    RESTPARAM  go to state 53


State 40

   59 DECL: TYPE TK_IDENTIFIER '[' LITERALINTEGER ']' ';' .

    $default  reduce using rule 59 (DECL)


State 41

   60 DECL: TYPE TK_IDENTIFIER '[' LITERALINTEGER ']' ':' . RESTINILIT ';'

    LIT_INTEGER  shift, and go to state 21
    LIT_REAL     shift, and go to state 22
    LIT_CHAR     shift, and go to state 23

    $default  reduce using rule 69 (RESTINILIT)

    INILIT          go to state 54
    RESTINILIT      go to state 55
    VARREAL         go to state 25
    LITERALINTEGER  go to state 26
    CARAC           go to state 27


State 42

   61 DECL: TYPE '#' TK_IDENTIFIER '=' INILIT ';' .

    $default  reduce using rule 61 (DECL)


State 43

   28 CONTROLFL: KW_IF . '(' EXPRES ')' KW_THEN COMAND
   29          | KW_IF . '(' EXPRES ')' KW_THEN COMAND KW_ELSE COMAND

    '('  shift, and go to state 56


State 44

   30 CONTROLFL: KW_WHILE . '(' EXPRES ')' BODY

    '('  shift, and go to state 57


State 45

   31 CONTROLFL: KW_FOR . '(' TK_IDENTIFIER '=' EXPRES KW_TO EXPRES ')' COMAND

    '('  shift, and go to state 58


State 46

   20 COMAND: KW_READ . TK_IDENTIFIER

    TK_IDENTIFIER  shift, and go to state 59


State 47

   22 COMAND: KW_RETURN . EXPRES

    TK_IDENTIFIER  shift, and go to state 60
    LIT_INTEGER    shift, and go to state 21
    LIT_REAL       shift, and go to state 22
    LIT_CHAR       shift, and go to state 23
    '!'            shift, and go to state 61
    '('            shift, and go to state 62
    ')'            shift, and go to state 63
    '#'            shift, and go to state 64
    '&'            shift, and go to state 65

    EXPRES          go to state 66
    VARREAL         go to state 67
    LITERALINTEGER  go to state 68
    CARAC           go to state 69


State 48

   21 COMAND: KW_PRINT . LISTPRINT

    TK_IDENTIFIER  shift, and go to state 60
    LIT_INTEGER    shift, and go to state 21
    LIT_REAL       shift, and go to state 22
    LIT_CHAR       shift, and go to state 23
    LIT_STRING     shift, and go to state 70
    '!'            shift, and go to state 61
    '('            shift, and go to state 62
    ')'            shift, and go to state 63
    '#'            shift, and go to state 64
    '&'            shift, and go to state 65

    LISTPRINT       go to state 71
    ELEMENT         go to state 72
    EXPRES          go to state 73
    VARREAL         go to state 67
    LITERALINTEGER  go to state 68
    CARAC           go to state 69


State 49

   17 COMAND: TK_IDENTIFIER . '=' EXPRES
   18       | TK_IDENTIFIER . '[' EXPRES ']' '=' EXPRES

    '='  shift, and go to state 74
    '['  shift, and go to state 75


State 50

   12 BODY: '{' BLCCOMAND . '}'

    '}'  shift, and go to state 76


State 51

   13 BLCCOMAND: COMAND . RESTCOMAND

    ';'  shift, and go to state 77

    $default  reduce using rule 16 (RESTCOMAND)

    RESTCOMAND  go to state 78


State 52

   19 COMAND: CONTROLFL .

    $default  reduce using rule 19 (COMAND)


State 53

    9 RESTPARAM: ',' PARAM RESTPARAM .

    $default  reduce using rule 9 (RESTPARAM)


State 54

   68 RESTINILIT: INILIT . RESTINILIT

    LIT_INTEGER  shift, and go to state 21
    LIT_REAL     shift, and go to state 22
    LIT_CHAR     shift, and go to state 23

    $default  reduce using rule 69 (RESTINILIT)

    INILIT          go to state 54
    RESTINILIT      go to state 79
    VARREAL         go to state 25
    LITERALINTEGER  go to state 26
    CARAC           go to state 27


State 55

   60 DECL: TYPE TK_IDENTIFIER '[' LITERALINTEGER ']' ':' RESTINILIT . ';'

    ';'  shift, and go to state 80


State 56

   28 CONTROLFL: KW_IF '(' . EXPRES ')' KW_THEN COMAND
   29          | KW_IF '(' . EXPRES ')' KW_THEN COMAND KW_ELSE COMAND

    TK_IDENTIFIER  shift, and go to state 60
    LIT_INTEGER    shift, and go to state 21
    LIT_REAL       shift, and go to state 22
    LIT_CHAR       shift, and go to state 23
    '!'            shift, and go to state 61
    '('            shift, and go to state 62
    ')'            shift, and go to state 63
    '#'            shift, and go to state 64
    '&'            shift, and go to state 65

    EXPRES          go to state 81
    VARREAL         go to state 67
    LITERALINTEGER  go to state 68
    CARAC           go to state 69


State 57

   30 CONTROLFL: KW_WHILE '(' . EXPRES ')' BODY

    TK_IDENTIFIER  shift, and go to state 60
    LIT_INTEGER    shift, and go to state 21
    LIT_REAL       shift, and go to state 22
    LIT_CHAR       shift, and go to state 23
    '!'            shift, and go to state 61
    '('            shift, and go to state 62
    ')'            shift, and go to state 63
    '#'            shift, and go to state 64
    '&'            shift, and go to state 65

    EXPRES          go to state 82
    VARREAL         go to state 67
    LITERALINTEGER  go to state 68
    CARAC           go to state 69


State 58

   31 CONTROLFL: KW_FOR '(' . TK_IDENTIFIER '=' EXPRES KW_TO EXPRES ')' COMAND

    TK_IDENTIFIER  shift, and go to state 83


State 59

   20 COMAND: KW_READ TK_IDENTIFIER .

    $default  reduce using rule 20 (COMAND)


State 60

   34 EXPRES: TK_IDENTIFIER .
   35       | TK_IDENTIFIER . '[' EXPRES ']'
   52       | TK_IDENTIFIER . '(' LSTARG ')'

    '('  shift, and go to state 84
    '['  shift, and go to state 85

    '('       [reduce using rule 34 (EXPRES)]
    $default  reduce using rule 34 (EXPRES)


State 61

   45 EXPRES: '!' . EXPRES

    TK_IDENTIFIER  shift, and go to state 60
    LIT_INTEGER    shift, and go to state 21
    LIT_REAL       shift, and go to state 22
    LIT_CHAR       shift, and go to state 23
    '!'            shift, and go to state 61
    '('            shift, and go to state 62
    ')'            shift, and go to state 63
    '#'            shift, and go to state 64
    '&'            shift, and go to state 65

    EXPRES          go to state 86
    VARREAL         go to state 67
    LITERALINTEGER  go to state 68
    CARAC           go to state 69


State 62

   32 EXPRES: '(' .

    $default  reduce using rule 32 (EXPRES)


State 63

   33 EXPRES: ')' .

    $default  reduce using rule 33 (EXPRES)


State 64

   53 EXPRES: '#' . TK_IDENTIFIER

    TK_IDENTIFIER  shift, and go to state 87


State 65

   54 EXPRES: '&' . TK_IDENTIFIER

    TK_IDENTIFIER  shift, and go to state 88


State 66

   22 COMAND: KW_RETURN EXPRES .
   39 EXPRES: EXPRES . '*' EXPRES
   40       | EXPRES . '+' EXPRES
   41       | EXPRES . '-' EXPRES
   42       | EXPRES . '/' EXPRES
   43       | EXPRES . '<' EXPRES
   44       | EXPRES . '>' EXPRES
   46       | EXPRES . OPERATOR_LE EXPRES
   47       | EXPRES . OPERATOR_GE EXPRES
   48       | EXPRES . OPERATOR_EQ EXPRES
   49       | EXPRES . OPERATOR_NE EXPRES
   50       | EXPRES . OPERATOR_AND EXPRES
   51       | EXPRES . OPERATOR_OR EXPRES

    OPERATOR_LE   shift, and go to state 89
    OPERATOR_GE   shift, and go to state 90
    OPERATOR_EQ   shift, and go to state 91
    OPERATOR_NE   shift, and go to state 92
    OPERATOR_AND  shift, and go to state 93
    OPERATOR_OR   shift, and go to state 94
    '<'           shift, and go to state 95
    '>'           shift, and go to state 96
    '-'           shift, and go to state 97
    '+'           shift, and go to state 98
    '*'           shift, and go to state 99
    '/'           shift, and go to state 100

    $default  reduce using rule 22 (COMAND)


State 67

   38 EXPRES: VARREAL .

    $default  reduce using rule 38 (EXPRES)


State 68

   36 EXPRES: LITERALINTEGER .

    $default  reduce using rule 36 (EXPRES)


State 69

   37 EXPRES: CARAC .

    $default  reduce using rule 37 (EXPRES)


State 70

   26 ELEMENT: LIT_STRING .

    $default  reduce using rule 26 (ELEMENT)


State 71

   21 COMAND: KW_PRINT LISTPRINT .

    $default  reduce using rule 21 (COMAND)


State 72

   23 LISTPRINT: ELEMENT . RESTELEMENT

    TK_IDENTIFIER  shift, and go to state 60
    LIT_INTEGER    shift, and go to state 21
    LIT_REAL       shift, and go to state 22
    LIT_CHAR       shift, and go to state 23
    LIT_STRING     shift, and go to state 70
    '!'            shift, and go to state 61
    '('            shift, and go to state 62
    ')'            shift, and go to state 63
    '#'            shift, and go to state 64
    '&'            shift, and go to state 65

    $default  reduce using rule 25 (RESTELEMENT)

    RESTELEMENT     go to state 101
    ELEMENT         go to state 102
    EXPRES          go to state 73
    VARREAL         go to state 67
    LITERALINTEGER  go to state 68
    CARAC           go to state 69


State 73

   27 ELEMENT: EXPRES .
   39 EXPRES: EXPRES . '*' EXPRES
   40       | EXPRES . '+' EXPRES
   41       | EXPRES . '-' EXPRES
   42       | EXPRES . '/' EXPRES
   43       | EXPRES . '<' EXPRES
   44       | EXPRES . '>' EXPRES
   46       | EXPRES . OPERATOR_LE EXPRES
   47       | EXPRES . OPERATOR_GE EXPRES
   48       | EXPRES . OPERATOR_EQ EXPRES
   49       | EXPRES . OPERATOR_NE EXPRES
   50       | EXPRES . OPERATOR_AND EXPRES
   51       | EXPRES . OPERATOR_OR EXPRES

    OPERATOR_LE   shift, and go to state 89
    OPERATOR_GE   shift, and go to state 90
    OPERATOR_EQ   shift, and go to state 91
    OPERATOR_NE   shift, and go to state 92
    OPERATOR_AND  shift, and go to state 93
    OPERATOR_OR   shift, and go to state 94
    '<'           shift, and go to state 95
    '>'           shift, and go to state 96
    '-'           shift, and go to state 97
    '+'           shift, and go to state 98
    '*'           shift, and go to state 99
    '/'           shift, and go to state 100

    $default  reduce using rule 27 (ELEMENT)


State 74

   17 COMAND: TK_IDENTIFIER '=' . EXPRES

    TK_IDENTIFIER  shift, and go to state 60
    LIT_INTEGER    shift, and go to state 21
    LIT_REAL       shift, and go to state 22
    LIT_CHAR       shift, and go to state 23
    '!'            shift, and go to state 61
    '('            shift, and go to state 62
    ')'            shift, and go to state 63
    '#'            shift, and go to state 64
    '&'            shift, and go to state 65

    EXPRES          go to state 103
    VARREAL         go to state 67
    LITERALINTEGER  go to state 68
    CARAC           go to state 69


State 75

   18 COMAND: TK_IDENTIFIER '[' . EXPRES ']' '=' EXPRES

    TK_IDENTIFIER  shift, and go to state 60
    LIT_INTEGER    shift, and go to state 21
    LIT_REAL       shift, and go to state 22
    LIT_CHAR       shift, and go to state 23
    '!'            shift, and go to state 61
    '('            shift, and go to state 62
    ')'            shift, and go to state 63
    '#'            shift, and go to state 64
    '&'            shift, and go to state 65

    EXPRES          go to state 104
    VARREAL         go to state 67
    LITERALINTEGER  go to state 68
    CARAC           go to state 69


State 76

   12 BODY: '{' BLCCOMAND '}' .

    $default  reduce using rule 12 (BODY)


State 77

   15 RESTCOMAND: ';' . COMAND RESTCOMAND

    KW_IF          shift, and go to state 43
    KW_WHILE       shift, and go to state 44
    KW_FOR         shift, and go to state 45
    KW_READ        shift, and go to state 46
    KW_RETURN      shift, and go to state 47
    KW_PRINT       shift, and go to state 48
    TK_IDENTIFIER  shift, and go to state 49

    COMAND     go to state 105
    CONTROLFL  go to state 52


State 78

   13 BLCCOMAND: COMAND RESTCOMAND .

    $default  reduce using rule 13 (BLCCOMAND)


State 79

   68 RESTINILIT: INILIT RESTINILIT .

    $default  reduce using rule 68 (RESTINILIT)


State 80

   60 DECL: TYPE TK_IDENTIFIER '[' LITERALINTEGER ']' ':' RESTINILIT ';' .

    $default  reduce using rule 60 (DECL)


State 81

   28 CONTROLFL: KW_IF '(' EXPRES . ')' KW_THEN COMAND
   29          | KW_IF '(' EXPRES . ')' KW_THEN COMAND KW_ELSE COMAND
   39 EXPRES: EXPRES . '*' EXPRES
   40       | EXPRES . '+' EXPRES
   41       | EXPRES . '-' EXPRES
   42       | EXPRES . '/' EXPRES
   43       | EXPRES . '<' EXPRES
   44       | EXPRES . '>' EXPRES
   46       | EXPRES . OPERATOR_LE EXPRES
   47       | EXPRES . OPERATOR_GE EXPRES
   48       | EXPRES . OPERATOR_EQ EXPRES
   49       | EXPRES . OPERATOR_NE EXPRES
   50       | EXPRES . OPERATOR_AND EXPRES
   51       | EXPRES . OPERATOR_OR EXPRES

    OPERATOR_LE   shift, and go to state 89
    OPERATOR_GE   shift, and go to state 90
    OPERATOR_EQ   shift, and go to state 91
    OPERATOR_NE   shift, and go to state 92
    OPERATOR_AND  shift, and go to state 93
    OPERATOR_OR   shift, and go to state 94
    '<'           shift, and go to state 95
    '>'           shift, and go to state 96
    '-'           shift, and go to state 97
    '+'           shift, and go to state 98
    '*'           shift, and go to state 99
    '/'           shift, and go to state 100
    ')'           shift, and go to state 106


State 82

   30 CONTROLFL: KW_WHILE '(' EXPRES . ')' BODY
   39 EXPRES: EXPRES . '*' EXPRES
   40       | EXPRES . '+' EXPRES
   41       | EXPRES . '-' EXPRES
   42       | EXPRES . '/' EXPRES
   43       | EXPRES . '<' EXPRES
   44       | EXPRES . '>' EXPRES
   46       | EXPRES . OPERATOR_LE EXPRES
   47       | EXPRES . OPERATOR_GE EXPRES
   48       | EXPRES . OPERATOR_EQ EXPRES
   49       | EXPRES . OPERATOR_NE EXPRES
   50       | EXPRES . OPERATOR_AND EXPRES
   51       | EXPRES . OPERATOR_OR EXPRES

    OPERATOR_LE   shift, and go to state 89
    OPERATOR_GE   shift, and go to state 90
    OPERATOR_EQ   shift, and go to state 91
    OPERATOR_NE   shift, and go to state 92
    OPERATOR_AND  shift, and go to state 93
    OPERATOR_OR   shift, and go to state 94
    '<'           shift, and go to state 95
    '>'           shift, and go to state 96
    '-'           shift, and go to state 97
    '+'           shift, and go to state 98
    '*'           shift, and go to state 99
    '/'           shift, and go to state 100
    ')'           shift, and go to state 107


State 83

   31 CONTROLFL: KW_FOR '(' TK_IDENTIFIER . '=' EXPRES KW_TO EXPRES ')' COMAND

    '='  shift, and go to state 108


State 84

   52 EXPRES: TK_IDENTIFIER '(' . LSTARG ')'

    TK_IDENTIFIER  shift, and go to state 60
    LIT_INTEGER    shift, and go to state 21
    LIT_REAL       shift, and go to state 22
    LIT_CHAR       shift, and go to state 23
    '!'            shift, and go to state 61
    '('            shift, and go to state 62
    ')'            shift, and go to state 63
    '#'            shift, and go to state 64
    '&'            shift, and go to state 65

    EXPRES          go to state 109
    LSTARG          go to state 110
    VARREAL         go to state 67
    LITERALINTEGER  go to state 68
    CARAC           go to state 69


State 85

   35 EXPRES: TK_IDENTIFIER '[' . EXPRES ']'

    TK_IDENTIFIER  shift, and go to state 60
    LIT_INTEGER    shift, and go to state 21
    LIT_REAL       shift, and go to state 22
    LIT_CHAR       shift, and go to state 23
    '!'            shift, and go to state 61
    '('            shift, and go to state 62
    ')'            shift, and go to state 63
    '#'            shift, and go to state 64
    '&'            shift, and go to state 65

    EXPRES          go to state 111
    VARREAL         go to state 67
    LITERALINTEGER  go to state 68
    CARAC           go to state 69


State 86

   39 EXPRES: EXPRES . '*' EXPRES
   40       | EXPRES . '+' EXPRES
   41       | EXPRES . '-' EXPRES
   42       | EXPRES . '/' EXPRES
   43       | EXPRES . '<' EXPRES
   44       | EXPRES . '>' EXPRES
   45       | '!' EXPRES .
   46       | EXPRES . OPERATOR_LE EXPRES
   47       | EXPRES . OPERATOR_GE EXPRES
   48       | EXPRES . OPERATOR_EQ EXPRES
   49       | EXPRES . OPERATOR_NE EXPRES
   50       | EXPRES . OPERATOR_AND EXPRES
   51       | EXPRES . OPERATOR_OR EXPRES

    '-'  shift, and go to state 97
    '+'  shift, and go to state 98
    '*'  shift, and go to state 99
    '/'  shift, and go to state 100

    $default  reduce using rule 45 (EXPRES)


State 87

   53 EXPRES: '#' TK_IDENTIFIER .

    $default  reduce using rule 53 (EXPRES)


State 88

   54 EXPRES: '&' TK_IDENTIFIER .

    $default  reduce using rule 54 (EXPRES)


State 89

   46 EXPRES: EXPRES OPERATOR_LE . EXPRES

    TK_IDENTIFIER  shift, and go to state 60
    LIT_INTEGER    shift, and go to state 21
    LIT_REAL       shift, and go to state 22
    LIT_CHAR       shift, and go to state 23
    '!'            shift, and go to state 61
    '('            shift, and go to state 62
    ')'            shift, and go to state 63
    '#'            shift, and go to state 64
    '&'            shift, and go to state 65

    EXPRES          go to state 112
    VARREAL         go to state 67
    LITERALINTEGER  go to state 68
    CARAC           go to state 69


State 90

   47 EXPRES: EXPRES OPERATOR_GE . EXPRES

    TK_IDENTIFIER  shift, and go to state 60
    LIT_INTEGER    shift, and go to state 21
    LIT_REAL       shift, and go to state 22
    LIT_CHAR       shift, and go to state 23
    '!'            shift, and go to state 61
    '('            shift, and go to state 62
    ')'            shift, and go to state 63
    '#'            shift, and go to state 64
    '&'            shift, and go to state 65

    EXPRES          go to state 113
    VARREAL         go to state 67
    LITERALINTEGER  go to state 68
    CARAC           go to state 69


State 91

   48 EXPRES: EXPRES OPERATOR_EQ . EXPRES

    TK_IDENTIFIER  shift, and go to state 60
    LIT_INTEGER    shift, and go to state 21
    LIT_REAL       shift, and go to state 22
    LIT_CHAR       shift, and go to state 23
    '!'            shift, and go to state 61
    '('            shift, and go to state 62
    ')'            shift, and go to state 63
    '#'            shift, and go to state 64
    '&'            shift, and go to state 65

    EXPRES          go to state 114
    VARREAL         go to state 67
    LITERALINTEGER  go to state 68
    CARAC           go to state 69


State 92

   49 EXPRES: EXPRES OPERATOR_NE . EXPRES

    TK_IDENTIFIER  shift, and go to state 60
    LIT_INTEGER    shift, and go to state 21
    LIT_REAL       shift, and go to state 22
    LIT_CHAR       shift, and go to state 23
    '!'            shift, and go to state 61
    '('            shift, and go to state 62
    ')'            shift, and go to state 63
    '#'            shift, and go to state 64
    '&'            shift, and go to state 65

    EXPRES          go to state 115
    VARREAL         go to state 67
    LITERALINTEGER  go to state 68
    CARAC           go to state 69


State 93

   50 EXPRES: EXPRES OPERATOR_AND . EXPRES
